Add search results and change form

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,15 @@
 <p>We are looking for feedback to improve Education Pathways and make it more useful for students. If you have ideas or suggestions, please <a href="mailto:alex.olson@utoronto.ca">email us!</a></p>
 
 {% from "_formhelpers.html" import render_field %}
-<form method="post">
+<form method="post" class="common-page-form">
   <dl>
     {{ render_field(form.select) }}
     <p>
-        Restrict by one of: {{ render_field(form.divisions) }} or {{ render_field(form.departments) }} or {{ render_field(form.campuses) }}
+      Restrict by one of: {{ render_field(form.divisions) }} or {{ render_field(form.departments) }} or {{ render_field(form.campuses) }}
     </p> 
     <p>
     {{ render_field(form.search) }}
   </p></dl>
-  <p>{{render_field(form.top)}} <input type="submit" value="Search">
-</p></form>
+  <p>{{render_field(form.top)}} <button type="submit" class="common-page-submit-btn">Search</button>
+  </p></form>
 </doctype>
