Add results.css changes and frontend of user story 3.2

--- a/templates/course.html
+++ b/templates/course.html
@@ -27,6 +27,11 @@
     </p>
     {% endif %}
 
+    <p>
+      <b>Career Paths:</b>
+      This section should display career paths this course could contribute toward.
+    </p>
+
     {% for t,a in zip(terms,activities) %}
     <p>
       <b>{{t}}:</b>
